--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
-<div class="d-grid gap-2 col-6 mx-auto">
+<!-- <div class="d-grid gap-2 col-6 mx-auto">
   <button class="btn btn-primary" type="button">Button</button>
   <button class="btn btn-primary" type="button">Button</button>
-</div>
+</div> -->
+
+<app-header></app-header>
+
+<br> <br><br><br><br>
+<app-body></app-body>
