--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,13 @@
 
 <app-header></app-header>
 
-<br> <br><br><br><br>
-<app-body></app-body>
+<br><br><br><br><br>
+
+<div class="container">
+  <app-info></app-info>
+
+  <app-body></app-body>
+
+  <app-card></app-card>
+</div>
+
