--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -1,17 +1,21 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid" id="items">
-      <div class="collapse navbar-collapse text-center d-flex justify-content-center" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
-          </li>
-        </ul>
-      </div>
+<nav class="navbar navbar-expand navbar-light bg-light">
+  <div class="container-fluid" id="items">
+    <div class="collapse navbar-collapse text-center d-flex justify-content-center" id="navbarNav">
+
+      <a class="" href="#">
+        <img src="/assets/img/Logo.JPG" height="50" alt="" loading="lazy" />
+      </a>
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" (click)="scrollToElement('infoSection')">Inofrmation</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" (click)="scrollToElement('card-briefcase')" >Portafolio</a>
+        </li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
