--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -5,6 +5,7 @@
     top: 0;
     width: 100%;
     background-color: black !important;
+    z-index: 1;
   }
 
 
@@ -20,7 +21,7 @@
     text-transform: uppercase;
     text-decoration: none;
     letter-spacing: 0.15em;
-    
+    cursor: pointer;
     display: inline-block;
     padding: 15px 20px;
     position: relative;
