--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,27 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~mdb-angular-ui-kit/assets/scss/mdb.scss";
+@import url('https://fonts.googleapis.com/css?family=Sacramento');
 
 body {
     background-color: rgb(39, 39, 43);
+}
+
+
+html, body { height: 100%; }
+
+/* Position the element and psuedo on top of each other and centers on screen */
+
+.h1-1 { 
+  z-index: 1;
+  color: hsl(357, 85%, 80%);
+  text-align: center;
+  font-family: 'Sacramento', cursive;
+  letter-spacing: -1px;
+  font-size: 4.5rem;
+}
+
+/* Set the psuedoelement beneath parent */
+.h1-1::after {
+  z-index: -1;
+  content: attr(data-content);
 }
