change the design

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,29 +1,74 @@
 <div class="content" id="card-briefcase">
-    <h2>Sadie</h2>
+
+    <h1 class="h1-1">Technologies and Languages </h1>
+
     <div class="grid">
         <figure class="effect-sadie">
-            <img src="https://tympanus.net/Development/HoverEffectIdeas/img/2.jpg" alt="img02" />
+            <img src="/assets/img/street.jpg" alt="img02" />
             <figcaption>
-                <h2>Holy <span>Sadie</span></h2>
-                <p>Sadie never took her eyes off me. <br>She had a dark soul.</p>
-                <a href="#">View more</a>
+                <h2>Back <span>End</span></h2>
+                <p>
+                    Java - Microservices Spring Boot
+                    <br>
+                    C# - Microservices Net Core
+                    <br>
+                    Elixir - Phoenix
+                </p>
             </figcaption>
         </figure>
-        <figure class="effect-romeo">
-            <img src="https://tympanus.net/Development/HoverEffectIdeas/img/17.jpg" alt="img17" />
+
+        <figure class="effect-sadie">
+            <img src="/assets/img/street2.jpg" alt="img02" />
             <figcaption>
-                <h2>Wild <span>Romeo</span></h2>
-                <p>Romeo never knows what he wants. He seemed to be very cross about something.</p>
-                <a href="#">View more</a>
+                <h2>Front <span>End</span></h2>
+                <p>
+                    Angular 2+
+                    <br>
+                    React Js
+                    <br>
+                    Vue
+                    <br>
+                    Javascript
+                    <br>
+                    Jquery
+                </p>
+
+
+            </figcaption>
+        </figure>
+
+
+        <figure class="effect-milo">
+            <img src="/assets/img/street3.jpg" alt="img11" />
+            <figcaption>
+                <h2>Movil <span>App's</span></h2>
+                <p>
+                    Android Native - Java
+                    <br>
+                    Ionic 4
+                    <br>
+                    Flutter
+                </p>
             </figcaption>
         </figure>
 
         <figure class="effect-milo">
-            <img src="https://tympanus.net/Development/HoverEffectIdeas/img/11.jpg" alt="img11" />
+            <img src="/assets/img/street4.jpg" alt="img11" />
             <figcaption>
-                <h2>Faithful <span>Milo</span></h2>
-                <p>Milo went to the woods. He took a fun ride and never came back.</p>
-                <a href="#">View more</a>
+                <h2>Data <span>Bases</span></h2>
+                <p>
+                    SQL Server
+                    <br>
+                    MySql
+                    <br>
+                    Postgress
+                    <br>
+                    Firebase
+                    <br>
+                    MongoDB
+                    <br>
+                    DynamoDB
+                </p>
             </figcaption>
         </figure>
     </div>
