--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -13,7 +13,7 @@
           <a class="nav-link" (click)="scrollToElement('infoSection')">Inofrmation</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" (click)="scrollToElement('card-briefcase')" >Portafolio</a>
+          <a class="nav-link" (click)="scrollToElement('card-briefcase')" >Technologies</a>
         </li>
       </ul>
     </div>
