fix the roblem with the images

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -4,7 +4,7 @@
 
     <div class="grid">
         <figure class="effect-sadie">
-            <img src="/assets/img/street.jpg" alt="img02" />
+            <img [src]="asset1" alt="img02" />
             <figcaption>
                 <h2>Back <span>End</span></h2>
                 <p>
@@ -18,7 +18,7 @@
         </figure>
 
         <figure class="effect-sadie">
-            <img src="/assets/img/street2.jpg" alt="img02" />
+            <img [src]="asset2" alt="img02" />
             <figcaption>
                 <h2>Front <span>End</span></h2>
                 <p>
@@ -39,7 +39,7 @@
 
 
         <figure class="effect-milo">
-            <img src="/assets/img/street3.jpg" alt="img11" />
+            <img [src]="asset3" alt="img11" />
             <figcaption>
                 <h2>Movil <span>App's</span></h2>
                 <p>
@@ -53,7 +53,7 @@
         </figure>
 
         <figure class="effect-milo">
-            <img src="/assets/img/street4.jpg" alt="img11" />
+            <img [src]="asset4" alt="img11" />
             <figcaption>
                 <h2>Data <span>Bases</span></h2>
                 <p>
