--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -3,7 +3,7 @@
     <div class="collapse navbar-collapse text-center d-flex justify-content-center" id="navbarNav">
 
       <a class="" href="#">
-        <img src="/assets/img/Logo.JPG" height="50" alt="" loading="lazy" />
+        <img [src]="logoAsset" height="50" alt="" loading="lazy" />
       </a>
       <ul class="navbar-nav">
         <li class="nav-item">
