change the effect in card

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -38,7 +38,7 @@
         </figure>
 
 
-        <figure class="effect-milo">
+        <figure class="effect-sadie">
             <img [src]="asset3" alt="img11" />
             <figcaption>
                 <h2>Movil <span>App's</span></h2>
@@ -52,7 +52,7 @@
             </figcaption>
         </figure>
 
-        <figure class="effect-milo">
+        <figure class="effect-sadie">
             <img [src]="asset3" alt="img11" />
             <figcaption>
                 <h2>Data <span>Bases</span></h2>
