Add new images and component contact

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,75 +1,125 @@
-<div class="content" id="card-briefcase">
+<div id="card-briefcase">
 
-    <h1 class="h1-1">Technologies and Languages </h1>
+    <h1 class="h1-1">Experience </h1>
+    <div class="card ">
+        <div class="card-body" style="color: antiquewhite;">
+            <h2 class="card-title"></h2>
+            <h4 class="card-text">
+                I have had the opportunity to work with different programming languages, technologies, and development, tools below you can find them.
+            </h4>
+        </div>
+    </div>
 
-    <div class="grid">
-        <figure class="effect-sadie">
-            <img [src]="asset1" alt="img02" />
-            <figcaption>
-                <h2>Back <span>End</span></h2>
-                <p>
-                    Java - Microservices Spring Boot
-                    <br>
-                    C# - Microservices Net Core
-                    <br>
-                    Elixir - Phoenix
-                </p>
-            </figcaption>
-        </figure>
+    <div class="content">
+        <div class="grid">
+            <figure class="effect-sadie">
+                <img [src]="asset1" alt="img02" />
+                <figcaption>
+                    <h2>Back <span>End</span></h2>
+                    <p>
+                        Java - Microservices Spring Boot
+                        <br>
+                        C# - Microservices Net Core
+                        <br>
+                        Elixir - Phoenix
+                    </p>
+                </figcaption>
+            </figure>
 
-        <figure class="effect-sadie">
-            <img [src]="asset2" alt="img02" />
-            <figcaption>
-                <h2>Front <span>End</span></h2>
-                <p>
-                    Angular 2+
-                    <br>
-                    React Js
-                    <br>
-                    Vue
-                    <br>
-                    Javascript
-                    <br>
-                    Jquery
-                </p>
+            <figure class="effect-sadie">
+                <img [src]="asset2" alt="img02" />
+                <figcaption>
+                    <h2>Front <span>End</span></h2>
+                    <p>
+                        Angular 2+
+                        <br>
+                        React Js
+                        <br>
+                        Vue
+                        <br>
+                        Javascript
+                        <br>
+                        Jquery
+                        <br>
+                        Html - Css
+                    </p>
+                </figcaption>
+            </figure>
 
 
-            </figcaption>
-        </figure>
+            <figure class="effect-sadie">
+                <img [src]="asset5" alt="img11" />
+                <figcaption>
+                    <h2>Movil <span>App's</span></h2>
+                    <p>
+                        Android Native - Java
+                        <br>
+                        Ionic 4
+                        <br>
+                        Flutter
+                        <br>
+                    </p>
+                </figcaption>
+            </figure>
+
+            <figure class="effect-sadie">
+                <img [src]="asset6" alt="img11" />
+                <figcaption>
+                    <h2>Data <span>Bases</span></h2>
+                    <p>
+                        SQL Server
+                        <br>
+                        MySql
+                        <br>
+                        Postgress
+                        <br>
+                        Firebase
+                        <br>
+                        MongoDB
+                        <br>
+                        DynamoDB
+                    </p>
+                </figcaption>
+            </figure>
 
 
-        <figure class="effect-sadie">
-            <img [src]="asset3" alt="img11" />
-            <figcaption>
-                <h2>Movil <span>App's</span></h2>
-                <p>
-                    Android Native - Java
-                    <br>
-                    Ionic 4
-                    <br>
-                    Flutter
-                </p>
-            </figcaption>
-        </figure>
 
-        <figure class="effect-sadie">
-            <img [src]="asset3" alt="img11" />
-            <figcaption>
-                <h2>Data <span>Bases</span></h2>
-                <p>
-                    SQL Server
-                    <br>
-                    MySql
-                    <br>
-                    Postgress
-                    <br>
-                    Firebase
-                    <br>
-                    MongoDB
-                    <br>
-                    DynamoDB
-                </p>
-            </figcaption>
-        </figure>
+            <figure class="effect-sadie">
+                <img [src]="asset7" alt="img11" />
+                <figcaption>
+                    <h2>IDE <span>S</span></h2>
+                    <p>
+                        Netbeans
+                        <br>
+                        Visual Studio Coded
+                        <br>
+                        Visual Studio
+                        <br>
+                        IntelliJ IDEA
+                        <br>                        
+                        Android Studio
+                    </p>
+                </figcaption>
+            </figure>
+
+
+
+            <figure class="effect-sadie">
+                <img [src]="asset3" alt="img11" />
+                <figcaption>
+                    <h2>Other <span>Things</span></h2>
+                    <p>
+                        Git
+                        <br>
+                        Maven
+                        <br>
+                        Gradle
+                        <br>
+                        Bitbucket - Github - Jira Bamboo
+
+                    </p>
+                </figcaption>
+            </figure>
+        </div>
     </div>
 </div>
