--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,5 +10,7 @@
 <div class="container">
   <app-info></app-info>
   <app-card></app-card>
+  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+  <app-contact></app-contact>
+  <br><br><br><br><br>
 </div>
-
