--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -6,14 +6,15 @@
         <img [src]="logoAsset" height="50" alt="" loading="lazy" />
       </a>
       <ul class="navbar-nav">
+
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link"  href="#">Info</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" (click)="scrollToElement('infoSection')">Inofrmation</a>
+          <a class="nav-link" (click)="scrollToElement('card-briefcase')" >Experience</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" (click)="scrollToElement('card-briefcase')" >Technologies</a>
+          <a class="nav-link" (click)="scrollToElement('contact')" >Contact</a>
         </li>
       </ul>
     </div>
